traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:15: error: not found: value hauteur
    hauteur = getMondeHauteur()
    ^TraversalByColumn:16: error: not found: value y
    y = getY()
    ^TraversalByColumn:17: error: not found: value y
    if(y == 0 || y == hauteur) {
       ^TraversalByColumn:17: error: not found: value y
    if(y == 0 || y == hauteur) {
                 ^TraversalByColumn:17: error: not found: value hauteur
    if(y == 0 || y == hauteur) {
                      ^TraversalByColumn:18: error: not found: value x
      setPos(x + 1, y)
             ^TraversalByColumn:18: error: not found: value y
      setPos(x + 1, y)
                    ^TraversalByColumn:21: error: not found: value y
      if(y == 0) {
         ^TraversalByColumn:23: error: not found: value x
        setPos(x, y + 1)
               ^TraversalByColumn:23: error: not found: value y
        setPos(x, y + 1)
                  ^TraversalByColumn:24: error: not found: value y
      } else if(y == hauteur) {
                ^TraversalByColumn:24: error: not found: value hauteur
      } else if(y == hauteur) {
                     ^TraversalByColumn:26: error: not found: value x
        setPos(x, y - 1)
               ^TraversalByColumn:26: error: not found: value y
        setPos(x, y - 1)
                  ^TraversalByColumn:30: error: not found: value x
        setPos(x, y + 1)
               ^TraversalByColumn:30: error: not found: value y
        setPos(x, y + 1)
                  ^TraversalByColumn:32: error: not found: value x
        setPos(x, y - 1)
               ^TraversalByColumn:32: error: not found: value y
        setPos(x, y - 1)
                  ^